--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
 	<meta charset="UTF-8">
+	<meta name="keywords" content="photographie, nina carducci, mariage, portrait">
+	<meta name="description" content="Portfolio de Nina Carducci, photographe de mariages, portrait et entreprise"> 
 	<script src="./assets/bootstrap/bootstrap.bundle.js"></script>
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 	<script src="./assets/maugallery.js"></script>
@@ -38,13 +40,13 @@
 		</div>
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				<img src="./assets/images/slider/photographie-homme-marchant.jpg" class="d-block w-100" alt="photographie-homme-marchant">
+				<img src="./assets/images/slider/photographie-homme-marchant.png" class="d-block w-100" alt="photographie-homme-marchant">
 			</div>
 			<div class="carousel-item">
-				<img src="./assets/images/slider/photographie-foule-concert.jpg" class="d-block w-100" alt="photographie-foule-concert">
+				<img src="./assets/images/slider/photographie-foule-concert.png" class="d-block w-100" alt="photographie-foule-concert">
 			</div>
 			<div class="carousel-item">
-				<img src="./assets/images/slider/photographie-maries.jpg" class="d-block w-100" alt="photographie-maries">
+				<img src="./assets/images/slider/photographie-maries.png" class="d-block w-100" alt="photographie-maries">
 			</div>
 		</div>
 		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
