Ajout metatags, css minifié

--- a/index.html
+++ b/index.html
@@ -1,15 +1,49 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr" itemscope itemtype="http://schema.org/Photograph">
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Découvrez le portfolio de Nina Carducci, photographe spécialisée dans les shootings et la création d'albums photos. Contactez-nous dès maintenant pour créer des souvenirs inoubliables.">
+	<!--Metatags Facebook-->
+	<meta property="og:title" content="Nina Carducci - Photographe">
+	<meta property="og:description" content="Portfolio de Nina Carducci, photographe mariages, portraits et entreprise.">
+	<meta property="og:type" content="website">
+	<meta property="og:image" content="">
+	<meta property="og:url" content="">
+	<!--Metatags Twitter-->
+	<meta name="twitter:card" content="summary">
+	<meta name="twitter:title" content="Nina Carducci - Photographe">
+	<meta name="twitter:description" content="Portfolio de Nina Carducci, photographe mariages, portraits et entreprise.">
+	<meta name="twitter:image" content="">
+	<!--Fin Metatags-->
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
-	<link rel="stylesheet" href="./assets/style.css">
+	<link rel="stylesheet" href="./assets/style_minified.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
 	<meta charset="UTF-8">
 	<meta name="keywords" content="photographie, nina carducci, mariage, portrait">
 	<meta name="description" content="Portfolio de Nina Carducci, photographe de mariages, portrait et entreprise"> 
+	<script type="application/ld+json">
+		{
+		  "@context": "https://schema.org",
+		  "@type": "Photographer",
+		  "name": "Nina Carducci",
+		  "jobTitle": "Photographe",
+		  "address": {
+			"@type": "PostalAddress",
+			"streetAddress": "148 W 51st St",
+			"addressLocality": "New York",
+			"addressRegion": "NY",
+			"postalCode": "10019",
+			"addressCountry": "US"
+		  },
+		  "geo": {
+			"@type": "GeoCoordinates",
+			"latitude": 40.761293,
+			"longitude": -73.982294
+		  }
+		}
+		</script>
 	<script src="./assets/bootstrap/bootstrap.bundle.js"></script>
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 	<script src="./assets/maugallery.js"></script>
@@ -18,7 +52,7 @@
 </head>
 <body>
 <header class="top-header">
-	<h1 class="name">Nina Carducci</h1>
+	<h1 class="name" itemprop="name">Nina Carducci</h1>
 	<nav class="nav">   
 		<ul>
 			<li><a href="#about">À propos</a></li>
@@ -30,7 +64,7 @@
 	</nav>
 </header>
 <main>
-<section id="header">
+<section id="header" itemprop="hasPart">
 
 	<article id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
 		<div class="carousel-indicators">
@@ -59,18 +93,18 @@
 		</button>
 	</article>
 </section>
-<section id="about">
+<section id="about" itemprop="hasPart">
 	<article class="picture left">
 		<img src="./assets/images/nina-carducci-portrait.png" alt="nina-carducci-portrait">
 	</article>
-	<article id="about-me">
+	<article id="about-me" itemprop="description">
 		<h2 class="about-me__title">A propos de moi</h2>
-		<h3 class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer.</h3>
+		<h3 class="about-me__introduction" itemprop="description">Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer.</h3>
 		<p>Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une envie : le figer au travers de photographies pour le savourer avec les personnes qui sont importantes à nos yeux, ou le partager au plus grand nombre.
 			C’est ce que je vous propose : saisir ces merveilleux moments au travers de mon regard, mon approche, ma technique. Rendre ces moments immortels, afin que vous puissiez y puiser de l’amour, du bonheur, de la tendresse et de lumière à chaque fois que vous poserez les yeux sur vos photos.</p>
 	</article>
 </section>
-<section id="gallery">
+<section id="gallery" itemprop="hasPart">
 	<h2 class="title">Portfolio</h2>
 	<article class="container py-3">
 		<div class="gallery" style="display: none">
@@ -94,7 +128,7 @@
 		</figure>
 	</article>
 </section>
-<section id="services">
+<section id="services" itemprop="hasPart">
 	<h2 class="title">Mes services</h2>
 	<div class="container">
 		<article class="service">
