balises schema.org

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Découvrez le portfolio de Nina Carducci, photographe spécialisée dans les shootings et la création d'albums photos. Contactez-nous dès maintenant pour créer des souvenirs inoubliables.">
+	<!--Balise schema.org : titre de la page-->
+	<meta itemprop="name" content="Nina Carducci - photographe">
 	<!--Metatags Facebook-->
 	<meta property="og:title" content="Nina Carducci - Photographe">
 	<meta property="og:description" content="Portfolio de Nina Carducci, photographe mariages, portraits et entreprise.">
@@ -23,6 +25,7 @@
 	<meta charset="UTF-8">
 	<meta name="keywords" content="photographie, nina carducci, mariage, portrait">
 	<meta name="description" content="Portfolio de Nina Carducci, photographe de mariages, portrait et entreprise"> 
+	<!--Rich snippets-->
 	<script type="application/ld+json">
 		{
 		  "@context": "https://schema.org",
@@ -41,7 +44,30 @@
 			"@type": "GeoCoordinates",
 			"latitude": 40.761293,
 			"longitude": -73.982294
+		  },
+		  "offers": [
+		  {
+			"@type": "Offer",
+			"name": "Shooting photo",
+			"description": "Capturez vos moments les plus précieux et gardez un souvenir impérissable.",
+			"price": "300€",
+			"priceCurrency": "EUR"
+		  },
+		  {
+			"@type": "Offer",
+			"name": "Retouches",
+			"description": "Retouchez vos photos pour un résultat professionnel et optimal.",
+			"price": "40€/photo",
+			"priceCurrency": "EUR"
+		  },
+		  {
+			"@type": "Offer",
+			"name": "Album photos",
+			"description": "Partagez vos photos à travers un album photo personnalisé.",
+			"price": "350€",
+			"priceCurrency": "EUR"
 		  }
+		  ]
 		}
 		</script>
 	<script src="./assets/bootstrap/bootstrap.bundle.js" defer></script>
