ajout url metatags

--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
 	<meta property="og:title" content="Nina Carducci - Photographe">
 	<meta property="og:description" content="Portfolio de Nina Carducci, photographe mariages, portraits et entreprise.">
 	<meta property="og:type" content="website">
-	<meta property="og:image" content="">
-	<meta property="og:url" content="">
+	<meta property="og:image" content="https://raw.githubusercontent.com/lomi9/projet_5/main/assets/images/nina_medium.png">
+	<meta property="og:url" content="https://lomi9.github.io/projet_5/">
 	<!--Metatags Twitter-->
 	<meta name="twitter:card" content="summary">
 	<meta name="twitter:title" content="Nina Carducci - Photographe">
 	<meta name="twitter:description" content="Portfolio de Nina Carducci, photographe mariages, portraits et entreprise.">
-	<meta name="twitter:image" content="">
+	<meta name="twitter:image" content="https://raw.githubusercontent.com/lomi9/projet_5/main/assets/images/nina_medium.png">
+	<meta name="twitter:url" content="https://lomi9.github.io/projet_5/">
 	<!--Fin Metatags-->
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
 	<link rel="stylesheet" href="./assets/style_minified.css">
