--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
 				sizes="(max-width: 650px) 100vw,
 				(max-width: 1000px) 100vw,
 				1950px"
-				class="d-block w-100" alt="photographie-homme-marchant">
+				class="d-block w-100" alt="photographie-homme-marchant"
+				loading="lazy">
 			</div>
 			<div class="carousel-item">
 				<img src="./assets/images/slider/photographie-foule-concert_large.jpg"
@@ -120,7 +121,8 @@
 				sizes="(max-width: 650px) 100vw,
 				(max-width: 1000px) 100vw,
 				1950px"
-				class="d-block w-100" alt="photographie-foule-concert">
+				class="d-block w-100" alt="photographie-foule-concert"
+				loading="lazy">
 			</div>
 			<div class="carousel-item">
 				<img src="./assets/images/slider/photographie-maries_large.jpg" 
@@ -131,7 +133,8 @@
 				sizes="(max-width: 650px) 100vw,
 				(max-width: 1000px) 100vw,
 				1950px"
-				class="d-block w-100" alt="photographie-maries">
+				class="d-block w-100" alt="photographie-maries"
+				loading="lazy">
 			</div>
 		</div>
 		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
