--- a/index.html
+++ b/index.html
@@ -51,21 +51,21 @@
 			"@type": "Offer",
 			"name": "Shooting photo",
 			"description": "Capturez vos moments les plus précieux et gardez un souvenir impérissable.",
-			"price": "300€",
+			"price": "350€",
 			"priceCurrency": "EUR"
 		  },
 		  {
 			"@type": "Offer",
 			"name": "Retouches",
 			"description": "Retouchez vos photos pour un résultat professionnel et optimal.",
-			"price": "40€/photo",
+			"price": "50€/photo",
 			"priceCurrency": "EUR"
 		  },
 		  {
 			"@type": "Offer",
 			"name": "Album photos",
 			"description": "Partagez vos photos à travers un album photo personnalisé.",
-			"price": "350€",
+			"price": "400€",
 			"priceCurrency": "EUR"
 		  }
 		  ]
@@ -86,7 +86,7 @@
 			<li><a href="#gallery">Galerie</a></li>
 			<li><a href="#services">Service</a></li>
 			<li><a href="#contact">Contact</a></li>
-			<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank" alt="lien-instagram" title="suivez-moi sur instagram"><img src="assets/images/instagram.png" alt="instagram" id="instagram"></a></li>
+			<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank" alt="lien-instagram" title="suivez-moi sur instagram"><img src="assets/images/instagram.png" alt="instagram" id="instagram" loading="lazy"></a></li>
 		</ul>
 	</nav>
 </header>
@@ -156,7 +156,7 @@
 				sizes="(max-width: 650px) 100vw,
 				(max-width: 1000px) 100vw,
 				1950px"
-				alt="nina-carducci-portrait">
+				alt="nina-carducci-portrait" loading="lazy">
 	</article>
 	<article id="about-me" itemprop="description">
 		<h2 class="about-me__title">A propos de moi</h2>
@@ -169,15 +169,15 @@
 	<h2 class="title">Portfolio</h2>
 	<article class="container py-3">
 		<div class="gallery" style="display: none">
-			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/photographie-concert.jpg" alt="photographie-concert"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/photographie-homme-costume.jpg" alt="photographie-homme-costume"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/photographie-femmes-rient.jpg" alt="photographie-femmes-rient"/>
-			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/photographie-mains-couple.jpg" alt="photographie-mains-couple"/>
-			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/photographie-homme-portrait-yeux-fermes.jpg" alt="photographie-homme-portrait-yeux-fermes"/>
-			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/photographie-maries-rient-palmier.jpg" alt="photographie-maries-rient-palmier"/>
-			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/photographie-femme-portrait-lunettes-grillage.jpg" alt="photographie-femme-portrait-lunettes-grillage"/>
-			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/photographie-homme-chante-concert-fumee.jpg" alt="photographie-homme-chante-concert-fumee"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/photographie-femme-pc-justice.jpg" alt="photographie-femme-pc-justice"/>
+			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/photographie-concert.jpg" alt="photographie-concert"loading="lazy"/>
+			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/photographie-homme-costume.jpg" alt="photographie-homme-costume"loading="lazy"/>
+			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/photographie-femmes-rient.jpg" alt="photographie-femmes-rient"loading="lazy"/>
+			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/photographie-mains-couple.jpg" alt="photographie-mains-couple"loading="lazy"/>
+			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/photographie-homme-portrait-yeux-fermes.jpg" alt="photographie-homme-portrait-yeux-fermes"loading="lazy"/>
+			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/photographie-maries-rient-palmier.jpg" alt="photographie-maries-rient-palmier"loading="lazy"/>
+			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/photographie-femme-portrait-lunettes-grillage.jpg" alt="photographie-femme-portrait-lunettes-grillage"loading="lazy"/>
+			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/photographie-homme-chante-concert-fumee.jpg" alt="photographie-homme-chante-concert-fumee"loading="lazy"/>
+			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/photographie-femme-pc-justice.jpg" alt="photographie-femme-pc-justice"loading="lazy"/>
 		</div>
 	</article>
 	<article class="quote">
@@ -250,7 +250,7 @@
 			</form>
 		</article>
 		<article class="picture right">
-			<img src="./assets/images/camera.png" alt="camera" id="camera">
+			<img src="./assets/images/camera.png" alt="camera" id="camera" loading="lazy">
 		</article>
 	</div>
 </footer>
