--- a/index.html
+++ b/index.html
@@ -109,8 +109,7 @@
 				sizes="(max-width: 650px) 100vw,
 				(max-width: 1000px) 100vw,
 				1950px"
-				class="d-block w-100" alt="photographie-homme-marchant"
-				loading="lazy">
+				class="d-block w-100" alt="photographie-homme-marchant">
 			</div>
 			<div class="carousel-item">
 				<img src="./assets/images/slider/photographie-foule-concert_large.jpg"
