balises schema.org

--- a/index.html
+++ b/index.html
@@ -30,21 +30,25 @@
 	<script type="application/ld+json">
 		{
 		  "@context": "https://schema.org",
-		  "@type": "Photographer",
+		  "@type": ["LocalBusiness", "Service"],
 		  "name": "Nina Carducci",
 		  "jobTitle": "Photographe",
+		  "description": "Nina Carducci, photographe professionnelle à Bordeaux."
+		  "image":"https://raw.githubusercontent.com/lomi9/projet_5/main/assets/images/nina_medium.png"
+		  "url": "https://lomi9.github.io/projet_5/"
+		  "telephone": "0556677889"
 		  "address": {
 			"@type": "PostalAddress",
-			"streetAddress": "148 W 51st St",
-			"addressLocality": "New York",
-			"addressRegion": "NY",
-			"postalCode": "10019",
-			"addressCountry": "US"
+			"streetAddress": "68 avenue Alsace-Lorraine",
+			"addressLocality": "Bordeaux",
+			"addressRegion": "33",
+			"postalCode": "33200",
+			"addressCountry": "FR"
 		  },
 		  "geo": {
 			"@type": "GeoCoordinates",
-			"latitude": 40.761293,
-			"longitude": -73.982294
+			"latitude": 44.846734,
+			"longitude": -0.606526
 		  },
 		  "offers": [
 		  {
