--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
 		  "@type": ["LocalBusiness", "Service"],
 		  "name": "Nina Carducci",
 		  "jobTitle": "Photographe",
-		  "description": "Nina Carducci, photographe professionnelle à Bordeaux."
-		  "image":"https://raw.githubusercontent.com/lomi9/projet_5/main/assets/images/nina_medium.png"
-		  "url": "https://lomi9.github.io/projet_5/"
-		  "telephone": "0556677889"
+		  "description": "Nina Carducci, photographe professionnelle à Bordeaux.",
+		  "image":"https://raw.githubusercontent.com/lomi9/projet_5/main/assets/images/nina_medium.png",
+		  "url": "https://lomi9.github.io/projet_5/",
+		  "telephone": "0556677889",
 		  "address": {
 			"@type": "PostalAddress",
 			"streetAddress": "68 avenue Alsace-Lorraine",
