optimisations google rich snippets

--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
 			"latitude": 44.846734,
 			"longitude": -0.606526
 		  },
+		  "priceRange" : "50€ - 400€"
+		},
 		  "offers": [
 		  {
 			"@type": "Offer",
