--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
 			"latitude": 44.846734,
 			"longitude": -0.606526
 		  },
-		  "priceRange" : "50€ - 400€"
-		},
+		  "priceRange" : "50€ - 400€",
 		  "offers": [
 		  {
 			"@type": "Offer",
